syntax = "proto3";
package echo;

option go_package = "github.com/realwrtoff/rest_grpc/proto/echo";

import "google/api/annotations.proto";

message EchoReq {
  string name = 2;
  int32 age = 3;
}

message EchoRes {
  string name = 1;
  int32 age = 2;
}

service EchoService {
  rpc Echo(EchoReq) returns (EchoRes) {
    option (google.api.http) = {
      get: "/v1/example/echo"
    };
  }
}

message Info {
  string op = 1;
  int64 a = 2;
  int64 b = 3;
}

message CalReq {
  string uid = 1;
  Info info = 2;
}

message CalRes {
  string uid = 1;
  int64 result = 2;
}

service CalService {
  rpc Cal(CalReq) returns (CalRes) {
    option (google.api.http) = {
      post: "/v2/example/cal/{uid}",
      body: "info"
    };
  }
}